internal/xds/translator/testdata/out/xds-ir/http-route-multiple-mirrors-percentage.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: mirror-route
      route:
        cluster: route-dest
        requestMirrorPolicies:
        - cluster: mirror-route-dest
          disableShadowHostSuffixAppend: true
          runtimeFraction:
            defaultValue:
              denominator: MILLION
              numerator: 250000
        - cluster: mirror-route-dest1
          disableShadowHostSuffixAppend: true
          runtimeFraction:
            defaultValue:
              denominator: MILLION
              numerator: 440000
        upgradeConfigs:
        - upgradeType: websocket
